force-app/main/default/objects/Financial_Account__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Holder Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>