force-app/main/default/objects/Financial_Account__c/fields/Account_Holding_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Account_Holding_Pattern__c</fullName>
    <label>Account Holding Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Jointly by all</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>