force-app/main/default/objects/Financial_Account__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <externalId>true</externalId>
    <label>Application Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>