force-app/main/default/objects/Financial_Account__c/fields/Financial_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Name__c</fullName>
    <externalId>true</externalId>
    <label>Financial Account Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>