force-app/main/default/objects/Financial_Account__c/fields/Maturity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Amount__c</fullName>
    <label>Maturity Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>